--- a/fetching-data/app/page.module.css
+++ b/fetching-data/app/page.module.css
@@ -28,17 +28,14 @@
   color: var(--gray-alpha-300);
 }
 
-img:hover .logo path {
-  fill: red;
-}
-
-@media (max-width: 600px) {
+@media (max-width: 1279px) {
   .page {
     padding: 32px;
     padding-bottom: 80px;
   }
 
   .main {
+    flex-direction: column;
     align-items: center;
   }
 }
